<resources>
    <string name="app_name">DoctorMobile</string>
    <string name="signInDescription">Korem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_password">enter password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="email">Email</string>
    <string name="forget_password">forget password</string>
    <string name="invalidEmailMessage">Enter Valid Email</string>
    <string name="weakPasswordMessage">"Enter Strong Password"</string>
    <string name="fillAllFields">"Fill all Fields"</string>
    <string name="full_name">Full Name</string>
    <string name="rajan">Rajan</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="denteeth">denteeth</string>
    <string name="all_doctors">All Doctors</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="already_have_account">already have an account? sign in</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="facebook_google">facebook google</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="dr_upul">Dr.Upul</string>
    <string name="doctor_description">Torem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="payment">Payment</string>
    <string name="_120_00">$ 120.00</string>
    <string name="detailes">Detailes</string>
    <string name="description">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis. Ut commodo efficitur neque. Ut diam quam, semper iaculis condimentum ac, vestibulum eu nisl.</string>
    <string name="working_hours">Working Hours</string>
    <string name="_10_00_am">10.00 AM</string>
    <string name="date">Date</string>
    <string name="_11_00_am">11.00 AM</string>
    <string name="_12_00_am">12.00 AM</string>
    <string name="_01_00_pm">01.00 PM</string>
    <string name="_02_00_pm">02.00 PM</string>
    <string name="_03_00_pm">03.00 PM</string>
    <string name="_04_00_pm">04.00 PM</string>
    <string name="_05_00_pm">05.00 PM</string>
    <string name="_06_00_pm">06.00 PM</string>
    <string name="_07_00_pm">07.00 PM</string>
    <string name="_08_00_pm">08.00 PM</string>
    <string name="_09_00_pm">09.00 PM</string>
    <string name="_10_00_pm">10.00 PM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timing">Timing</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="doctorDescription">Yorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>
    <string name="medical_center">Medical Center</string>
    <string name="doctor_picture">Doctor Picture</string>
    <string name="sun_4">Sun 4</string>
    <string name="mon_5">Mon 5</string>
    <string name="tue_6">Tue 6</string>
    <string name="wed_7">Wed 7</string>
    <string name="thu_8">Thu 8</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="call">Call</string>
    <string name="video_call">Video Call</string>
    <string name="mark_all">Mark All</string>
    <string name="new_string">New</string>
    <string name="dr_pawan">Dr.Pawan</string>
    <string name="docDescription">Jorem ipsum dolor, consectetur adipiscing elit. Nunc v libero et velit interdum, ac mattis.</string>
    <string name="book">Book</string>
    <string name="_5_0">5.0</string>
    <string name="favourite_logo">Favourite Logo</string>
    <string name="payment_success">Payment Success</string>
    <string name="congratulations">Congratulations</string>
    <string name="your_payment_is_successfuly">Your Payment Is Successfuly</string>
    <string name="back">Back</string>
    <string name="Payment">Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="place_order">Place Order</string>
    <string name="appointment">Appointment</string>
    <string name="notification">"Notification"</string>
    <string name="create_new_account">"Create New Account"</string>
    <string name="welcome">"Welcome"</string>
    <string name="logout">"Logout"</string>
    <string name="message">Message</string>
    <string name="active_now">Active Now</string>
    <string name="messages">Messages</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="doctor_chanaling_payment_method">Doctor Chanaling Payment Method</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="name">Name</string>
    <string name="chathura_sampath">Chathura Sampath</string>
    <string name="textview">TextView</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="back_image">Back Image</string>
    <string name="notification_logo">notification logo</string>
    <string name="status_image">status image</string>
    <string name="_2">2</string>
    <string name="fill_all_fields_properly">fill All Fields Properly</string>
    <string name="enter_valid_username_and_password">Enter Valid Username and Password</string>

</resources>